InformatieObjectType toegevoegd t.b.v. #154
