# src/ztc/api/serializers/informatieobjecttype.py
@@ -9,77 +9,81 @@ from ..utils.rest_flex_fields import FlexFieldsSerializerMixin
 from ..utils.serializers import SourceMappingSerializerMixin
 
 
-class InformatieObjectTypeSerializer(FlexFieldsSerializerMixin, SourceMappingSerializerMixin, NestedHyperlinkedModelSerializer):
+class InformatieObjectTypeSerializer(SourceMappingSerializerMixin, NestedHyperlinkedModelSerializer):
     """
     Serializer based on ``IOT-basis`` specified in XSD ``ztc0310_ent_basis.xsd``.
     """
     parent_lookup_kwargs = {
-        'catalogus_pk': 'maakt_deel_uit_van__pk'
+        'catalogus_uuid': 'maakt_deel_uit_van__uuid',
     }
 
     # This is needed because spanning relations is not done correctly when specifying the ``source`` attribute later,
     # as is done by the ``Meta.source_mapping`` property.
-    omschrijvingGeneriek = serializers.CharField(
-        read_only=True,
-        source='informatieobjecttype_omschrijving_generiek.informatieobjecttype_omschrijving_generiek',
-        max_length=80,
-        help_text=_('Algemeen gehanteerde omschrijving van het type informatieobject.')
-    )
-
-    isVastleggingVoor = NestedHyperlinkedRelatedField(
-        many=True,
-        read_only=True,
-        source='besluittype_set',
-        view_name='api:besluittype-detail',
-        parent_lookup_kwargs={'catalogus_pk': 'maakt_deel_uit_van__pk'}
-    )
-    isRelevantVoor = NestedHyperlinkedRelatedField(
-        many=True,
-        read_only=True,
-        source='zaakinformatieobjecttype_set',
-        view_name='api:zktiot-detail',
-        parent_lookup_kwargs={
-            'catalogus_pk': 'zaaktype__maakt_deel_uit_van__pk',
-            'zaaktype_pk': 'zaaktype__pk',
-        }
-    )
+    # omschrijvingGeneriek = serializers.CharField(
+    #     read_only=True,
+    #     source='informatieobjecttype_omschrijving_generiek.informatieobjecttype_omschrijving_generiek',
+    #     max_length=80,
+    #     help_text=_('Algemeen gehanteerde omschrijving van het type informatieobject.')
+    # )
+    #
+    # isVastleggingVoor = NestedHyperlinkedRelatedField(
+    #     many=True,
+    #     read_only=True,
+    #     source='besluittype_set',
+    #     view_name='api:besluittype-detail',
+    #     parent_lookup_kwargs={'catalogus_pk': 'maakt_deel_uit_van__pk'}
+    # )
+    # isRelevantVoor = NestedHyperlinkedRelatedField(
+    #     many=True,
+    #     read_only=True,
+    #     source='zaakinformatieobjecttype_set',
+    #     view_name='api:zktiot-detail',
+    #     parent_lookup_kwargs={
+    #         'catalogus_pk': 'zaaktype__maakt_deel_uit_van__pk',
+    #         'zaaktype_pk': 'zaaktype__pk',
+    #     }
+    # )
 
     class Meta:
         model = InformatieObjectType
         ref_name = model.__name__
         source_mapping = {
             'omschrijving': 'informatieobjecttype_omschrijving',
-            'categorie': 'informatieobjectcategorie',
-            'trefwoord': 'informatieobjecttypetrefwoord',
-            'vertrouwelijkAanduiding': 'vertrouwelijkheidaanduiding',
-            'ingangsdatumObject': 'datum_begin_geldigheid',
-            'einddatumObject': 'datum_einde_geldigheid',
+            # 'categorie': 'informatieobjectcategorie',
+            # 'trefwoord': 'informatieobjecttypetrefwoord',
+            # 'vertrouwelijkAanduiding': 'vertrouwelijkheidaanduiding',
+            # 'ingangsdatumObject': 'datum_begin_geldigheid',
+            # 'einddatumObject': 'datum_einde_geldigheid',
 
-            'maaktDeeluitVan': 'maakt_deel_uit_van',
+            'catalogus': 'maakt_deel_uit_van',
         }
         extra_kwargs = {
-            'url': {'view_name': 'api:informatieobjecttype-detail'},
-            'maaktDeeluitVan': {'view_name': 'api:catalogus-detail'},
+            'url': {
+                'lookup_field': 'uuid',
+            },
+            'catalogus': {
+                'lookup_field': 'uuid',
+            },
         }
         fields = (
             'url',
 
             'omschrijving',
-            'omschrijvingGeneriek',
-            'categorie',
-            'trefwoord',
-            'vertrouwelijkAanduiding',
-            'model',
-            'toelichting',
-            'ingangsdatumObject',
-            'einddatumObject',
-            'maaktDeeluitVan',
-            'isRelevantVoor',
-            'isVastleggingVoor',
+            # 'omschrijvingGeneriek',
+            # 'categorie',
+            # 'trefwoord',
+            # 'vertrouwelijkAanduiding',
+            # 'model',
+            # 'toelichting',
+            # 'ingangsdatumObject',
+            # 'einddatumObject',
+            'catalogus',
+            # 'isRelevantVoor',
+            # 'isVastleggingVoor',
         )
 
-    expandable_fields = {
-        'maaktDeeluitVan': ('ztc.api.serializers.CatalogusSerializer', {'source': 'maakt_deel_uit_van'}),
-        'isRelevantVoor': ('ztc.api.serializers.InformatieObjectTypeZaakTypeSerializer', {'source': 'zaakinformatieobjecttype_set'}),
-        'isVastleggingVoor': ('ztc.api.serializers.BesluitTypeSerializer', {'source': 'besluittype_set', 'many': True})
-    }
+    # expandable_fields = {
+    #     'catalogus': ('ztc.api.serializers.CatalogusSerializer', {'source': 'maakt_deel_uit_van'}),
+    #     'isRelevantVoor': ('ztc.api.serializers.InformatieObjectTypeZaakTypeSerializer', {'source': 'zaakinformatieobjecttype_set'}),
+    #     'isVastleggingVoor': ('ztc.api.serializers.BesluitTypeSerializer', {'source': 'besluittype_set', 'many': True})
+    # }
